# saim_tresor

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/audit/: logger.py
apps/api/app/core/cashflow/: forecast.py  tft.py
apps/api/app/core/invoicing/: anomalies.py  dso.py  relance.py
apps/api/app/core/reconciliation/: matcher.py  report.py
apps/api/app/db/: prisma.py
apps/api/app/llm/extraction/: bank_statement.py  invoice.py
apps/api/app/routers/: accounts.py  cashflow.py  invoicing.py  reconciliation.py
apps/api/app/schemas/: cashflow.py  invoicing.py  reconciliation.py
apps/api/app/services/: storage.py
apps/api/scripts/: seed_fixtures.py
apps/api/tests/: test_forecast.py  test_invoicing.py  test_matcher.py  test_tft.py
apps/web/: auth.ts  middleware.ts  next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/components/: AuthBackground.tsx  DashboardNav.tsx
apps/web/components/cashflow/: ForecastView.tsx  TFTActionsBar.tsx  TFTImportForm.tsx  TFTView.tsx
apps/web/components/invoicing/: AnalysePanel.tsx
apps/web/components/reconciliation/: ActionsBar.tsx  ImportForm.tsx  MatchTable.tsx  UploadForm.tsx
apps/web/components/ui/: icons.tsx  index.tsx
apps/web/lib/: api.ts  session.ts
fixtures/: balance_comptable.csv  factures.csv  factures_analyse.csv  grand_livre.csv  meta.json  releve_bancaire.csv
infra/: docker-compose.yml
(+17 files in other folders)
