[project]
name = "saim-treasury-api"
version = "0.1.0"
description = "SAIM Trésorerie — backend FastAPI (cœur de calcul déterministe)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "prisma>=0.15",          # prisma-client-py
    "rapidfuzz>=3.10",       # fuzzy matching déterministe (libellés)
    "python-multipart>=0.0.12",
    "boto3>=1.35",           # client S3 → Cloudflare R2 / MinIO
    "httpx>=0.27",           # appels Together AI / Groq
    "openpyxl>=3.1",         # export état de rapprochement (xlsx)
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
